--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "firebase": "^7.15.1",
     "vue": "^2.6.14",
+    "vue-axios": "^3.4.1",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
